# GameEngine3D

./: .gitignore  CMakeLists.txt  file.txt
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt
src/common/conf/: CMakeLists.txt  GlobalConfiguration.hpp  IConfiguration.hpp  ModuleConfiguration.hpp
src/common/games/: AGame.hpp  CMakeLists.txt
src/common/logger/: ArcLogger.cpp  ArcLogger.hpp  CMakeLists.txt
src/conf/: CMakeLists.txt  Configuration.cpp
src/core/: CMakeLists.txt  Core.hpp
src/core/commands/: Command.hpp  CommandResolver.hpp
src/game-engine/: CMakeLists.txt  main.cpp
src/game-engine/core/: CMakeLists.txt  Core.hpp  Shell.hpp
src/game-engine/core/commands/: BashCommand.hpp  CMakeLists.txt  Command.hpp  CommandResolver.hpp
src/game-engine/core/triggers/: AAutoTrigger.hpp  ABiTrigger.hpp  ATrigger.hpp  CMakeLists.txt  CollideTrigger.hpp  ITrigger.hpp  InputTrigger.hpp  SceneChange.hpp  SceneTrigger.hpp
src/game-engine/gameplayFramework/: CMakeLists.txt  GameObject.hpp  GamePlayFramework.hpp  Scene.hpp
src/game-engine/gameplayFramework/components/: CMakeLists.txt  camera.hh  (+5 more)
src/game-engine/modules/: AModule.hpp  CMakeLists.txt  ModuleManager.hpp
src/game-engine/shaders/: compile_depth.bat
src/game-engine/utils/: CMakeLists.txt
src/game-engine/window/: CMakeLists.txt  IWindow.hpp
src/gameplayFramework/: CMakeLists.txt  Entity.hpp  GameObject.hpp
src/gameplayFramework/components/: CMakeLists.txt  collider.hh  component.hh  transform.hh
src/games/: CMakeLists.txt
src/games/example1/: CMakeLists.txt  Example1Game.cpp
src/games/game1/: CMakeLists.txt  game1.cpp
src/modules/: AModule.hpp  CMakeLists.txt  GameObjectManipulator.hpp  Module.hpp  ModuleManager.hpp
src/modules/physics/: CMakeLists.txt  PhysicsModule.hpp
src/utils/: CMakeLists.txt
src/utils/conf/: CMakeLists.txt  ConfLoader.hpp  ConfParser.hpp  GlobalConfiguration.hpp  ModuleConfiguration.hpp
src/utils/format/: StringHelper.hpp
src/utils/logger/: ArcLogger.cpp  ArcLogger.hpp  CMakeLists.txt
src/utils/math/: EngineMath.hpp
src/utils/serialize/: CMakeLists.txt  ISerializable.hpp  Serializable.hpp
src/utils/uuid/: CMakeLists.txt
src/window/: IWindow.hpp
src/window/unix/: UnixWindow.hpp
src/window/windows/: CMakeLists.txt  WinWindow.hpp
(+38 files in other folders)
